package org.example;

public enum Language {
    ENGLISH,
    GERMAN,
    SPAIN,
    POLISH
}
