package org.example;

public interface PilotCompass {
    boolean hasCompass();
}
